# point_cloud_processing

./: .gitignore  README.md
ch1_introduction/: README.md
ch1_introduction/PCA/: CMakeLists.txt
ch1_introduction/PCA/src/: pca.cpp
ch1_introduction/PCA/test/: CMakeLists.txt  test_pca.cpp
ch1_introduction/PCA/utils/: CMakeLists.txt
ch1_introduction/hw1/lesson one/: off_to_ply.py  pca_data.py  pca_normal.py  test.py  voxel_filter.py
ch1_introduction/point_cloud_up_sampling/src/: bilateral_filter.cpp
ch1_introduction/point_cloud_up_sampling/up_sampling/: up_sampling.cpp
ch1_introduction/upsampling/: CMakeLists.txt
ch1_introduction/upsampling/datas/depth_selection/val_selection_cropped/prediction_depth/: stats_depth.txt
ch1_introduction/upsampling/datas/depth_selection/val_selection_cropped/prediction_depth/errors_out/: 1.txt  10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt
ch1_introduction/upsampling/src/: CMakeLists.txt  bilateral_filter.cpp  bilateral_filter.h
ch1_introduction/upsampling/test/: CMakeLists.txt  test_bilateral_filter.cpp  test_upsamp_all_imgs.cpp  test_upsampling.cpp
ch1_introduction/upsampling/test/devkit/: readme.txt
ch1_introduction/upsampling/test/devkit/cpp/: io_depth.h
ch1_introduction/upsampling/utils/: display.cpp  display.h  math_utils.h  opencv_utils.cpp  opencv_utils.h
ch2_nearest_neighbor_problem/: README.md  test_.py
ch2_nearest_neighbor_problem/hw/: README.md  benchmark.py  brut_force.py  bst.py  kdtree.py  kdtree_hw.py  octree.py  result_set.py  test.py  test_bst.py  test_kdtree.py  test_octree.py  timer.py
ch2_nearest_neighbor_problem/kdtree/: CMakeLists.txt
ch2_nearest_neighbor_problem/kdtree/src/: CMakeLists.txt  gkdtree.cpp  gkdtree.h
ch2_nearest_neighbor_problem/kdtree/test/: CMakeLists.txt  test_gkdtree.cpp  test_pcl.cpp  test_pcl_kdtree.cpp
ch2_nearest_neighbor_problem/kdtree/utils/: debug_utils.h  math_utils.h  opencv_utils.h
ch2_nearest_neighbor_problem/pcl/: CMakeLists.txt
ch2_nearest_neighbor_problem/pcl/src/: kdt.cpp
ch3_clustering/: README.md
ch3_clustering/.ipynb_checkpoints/: solutions-checkpoint.ipynb
ch3_clustering/hw/: GMM.py  KMeans.py  KMeans_components.py  README.md  SpectralClustering.py  compare_cluster.py  spectral_clustering.py  test_kmeans.py  util.py
ch3_clustering/spectral_clustering/: CMakeLists.txt
ch3_clustering/spectral_clustering/src/: CMakeLists.txt  pca.h
ch3_clustering/spectral_clustering/test/: CMakeLists.txt  test_pca.cpp
ch3_clustering/spectral_clustering/utils/: display.cpp
ch4_model_fitting/: README.md  clustering.py  clustering_open3d.py  dbscan.py  ground_filter.py  homemade_dbscan.py  read_bin.py  readme.md  test.py  test_dbscan.py  test_lsq.py  vis_pcl.py
ch5_deep_learning/: readme.md
ch5_deep_learning/PointNet/: eval.py  readme.md  system.drawio  test.py  train.py
ch5_deep_learning/PointNet/home/gfeng/gfeng_ws/exp2/train/: model_at_epoch10.pth  model_at_epoch20.pth  model_at_epoch50.pth
ch5_deep_learning/PointNet/util/: PointNet.py  PointNetpp.py  PointNetpp_utils.py  argparser.py  data_loader.py  model.py  test.py  utils.py
ch5_pointnet/: calc.md  dataloader.py  model.py  readme.md  t.py  train.py
ch5_pointnet/PointNet/: test.py  train.py
ch5_pointnet/PointNet/home/gfeng/gfeng_ws/exp2/train/: best_model.pth  model_at_epoch30.pth  model_at_epoch40.pth
ch5_pointnet/PointNet/util/: PointNet.py  PointNetPP.py  PointNetPP_utils.py
ch6_object_detection/: readme.md
ch6_object_detection/PointRCNN/: .gitignore
ch6_object_detection/PointRCNN/lib/utils/iou3d/src/: iou3d.cpp
ch6_object_detection/PointRCNN/output/rcnn/default/eval/epoch_no_number/val/: log_eval_one.txt
ch6_object_detection/PointRCNN/output/rcnn/default/eval/epoch_no_number/val/final_result/: stats_car_detection_3d.txt  stats_car_detection_ground.txt
ch6_object_detection/PointRCNN/output/rcnn/default/eval/epoch_no_number/val/final_result/data/: 000006.txt  000008.txt  000015.txt  000021.txt  000024.txt  000025.txt  000031.txt  000035.txt  000047.txt  000048.txt  000050.txt  000052.txt  000053.txt  000061.txt  000063.txt  000078.txt  000081.txt  000093.txt  000098.txt  000102.txt  000104.txt  000106.txt  000107.txt  000108.txt  000117.txt  000122.txt  000124.txt  000132.txt  000134.txt  000135.txt  000137.txt  000147.txt  000151.txt  000156.txt  000161.txt  000169.txt  000173.txt  000175.txt  000181.txt  000183.txt  (+1973 more)
ch6_object_detection/PointRCNN/output/rcnn/default/eval/epoch_no_number/val/final_result/plot/: car_detection.eps  car_detection_3d.eps  car_detection_3d.txt  car_detection_ground.eps  (+2 more)
ch6_object_detection/kitti_eval/: evaluate_object_3d
ch7_Feature_detection/: CMakeLists.txt  opensrc.cpp  readme.md
ch7_Feature_detection/data/: 0.pcd
ch7_Feature_detection/src/: CMakeLists.txt  iss.cpp  iss.h
ch7_Feature_detection/test/: CMakeLists.txt  test_iss.cpp
ch7_feature_detection/: CMakeLists.txt  a.out  readme.md
ch7_feature_detection/src/: CMakeLists.txt  iss.cpp  iss.h
ch7_feature_detection/test/: CMakeLists.txt  test_iss_pcl.cpp  test_my_iss.cpp  test_sort.cpp
ch8_feature_description/: CMakeLists.txt
ch8_feature_description/src/: CMakeLists.txt
ch8_feature_description/test/: CMakeLists.txt  test_pfh.cpp
ch8_feature_descriptor/: CMakeLists.txt  README.md  a.out  pcl_wrapper_test.py  test_histogram.py
ch8_feature_descriptor/datas/: PCLConfig.cmake
ch8_feature_descriptor/src/: CMakeLists.txt  fpfh.cpp  fpfh.h  iss.cpp  spfh.cpp
ch8_feature_descriptor/test/: CMakeLists.txt  test_fpfh_resultset.cpp  test_iss_pcl.cpp  test_my_fpfh.cpp  test_my_iss.cpp  test_overloaded_operator_func.cpp  test_spfh_resultset.cpp
ch9_registration/: CMakeLists.txt  README.md  test_histogram.py
ch9_registration/src/: CMakeLists.txt  ransac.cpp  ransac.h  spfh.h
ch9_registration/test/: CMakeLists.txt  a.out  test_find_correspondence.cpp  test_generate_random_numbers.cpp  test_iss_pcl.cpp  test_my_fpfh.cpp  test_my_iss.cpp  test_ransac.cpp
